--- a/AppMain/Controller/templates/table.html
+++ b/AppMain/Controller/templates/table.html
@@ -2,6 +2,117 @@
 
 {% block body %}
 
-<h1>This is the table page</h1>
+<!-- <div class="mx-auto col-md-2 mb-5 mt-5">
+    <div class="row">
+        <div class="col-md-10 col-md-offset-4">
+            <div class="card-body d-flex justify-content-beteween">
+                <a href="/addItem" class="btn btn-primary me-4">Add</a>                
+                <a href="" class="btn btn-danger">DELETE</a>    
+            </div>
+        </div>
+    </div>
+</div> -->
+
+
+<!-- <div class="mx-auto col-md-7 mb-4">
+    <div class="form-check">
+        <input id="checkbox" class="form-check-input"  type="checkbox" style="pointer-events: none;">
+        
+    </div>       
+</div> -->
+
+<form method="POST" action="/addItem">
+    <div class="mx-auto col-md-2 mb-5 mt-5">
+        <div id='btnContainers' class="d-flex justify-content-center gap-3 mb-4">
+            <!-- <button type="submit" class="btn btn-primary me-4">Add</button> -->
+
+            <!-- <a id="btnDelete" href="#" class="btn btn-secundary me-4" style="pointer-events: none;">Delete</a>  -->
+
+            <!-- <a id="btnEdit" href="#" class="btn btn-secundary me-4" style="pointer-events: none;">Edit</a>  -->
+        </div>
+        <!-- <script>
+            function btnTestt(){
+                const btnDelete = document.getElementById('btnDelete');
+                btnDelete.removeAttribute('style')
+            }
+        </script> -->
+    </div>
+    <!-- <div class="d-flex">        
+        <div class="d-flex flex-column justify-content-start">
+            {% for item_Information in itemInformation %}
+            <div class="form-check mb-2">
+                <input id="checkbox" class="form-check-input"  type="checkbox" style="pointer-events: none;">
+            </div> 
+            {%endfor%}
+        </div>  
+    </div> -->
+    <div class="mx-auto col-md-7">
+        <div>
+            <table class="table table-striped table-bordered bg-white table-sm">
+                <thead>
+                    <tr class="form-group pt-3">
+                        <th>ITEMS</th>
+                        <th>QUANTITY</th>
+                        <th>KG or LT</th>
+                        <th>PRICE</th>
+                        <th>NOTES</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            <input class="form-control inputsTable" size="60"type="text" name="item" class="form-group">
+                        </td>
+                        <td>
+                            <select class="form-select me-2 inputsTable" name="quantity">
+                                <option>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                                <option>5</option>
+                            </select>
+                        </td>
+                        <td>
+                            <div class="d-flex align-items-center">
+                                <input class="form-control form-control me-2 inputsTable" size="120" type="text" name="kg_or_lt" class="form-group">
+                                <select class="form-select form-control-lg inputsTable" name="unit" id="">
+                                    <option value="Kg">KG</option>
+                                    <option value="Lt">LT</option>
+                                </select>
+                            </div>
+                        </td>
+                        <td>
+                            <input class="form-control inputsTable" size="70" type="text" name="price" class="form-group">
+                        </td>
+                        <td>
+                            <input class="form-control inputsTable" size="80" type="NOTE" name="notes" class="form-group">
+                        </td>
+                    </tr>   
+
+                    {% for item_Information in itemInformation %}
+                    <tr>
+                        <td> <a onclick="itemsDeleteFu()" href="#" class="btn btn-secundary">{{item_Information.1}}</a>
+                        <!-- <script src="{{url_for('static', filename='js/main.js')}}"></script> -->
+                        </td>
+                        <td><a onclick="itemsDeleteFu()" class="btn btn-secundary" href="#">{{item_Information.2}}</a></td>
+                        <td><a onclick="itemsDeleteFu()" class="btn btn-secundary" href="#">{{item_Information.3}}</a></td>
+                        <td><a onclick="itemsDeleteFu()" class="btn btn-secundary" href="#">{{item_Information.4}}</a></td>
+                        <td><a onclick="itemsDeleteFu()" class="btn btn-secundary" href="#">{{item_Information.5}}</a></td>
+                        <!-- <td>
+                            <div class="form-check d-flex align-items-center text-start ms-4">
+                                <input id="checkbox" class="form-check-input"  type="checkbox" style="pointer-events: none;">
+                            </div>  
+                        </td> -->
+                    </tr>
+                    {%endfor%}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</form>
+
+
+
+
 
 {% endblock %}
