updating the edit funtion branch

--- a/AppMain/Controller/templates/authenticating_user.html
+++ b/AppMain/Controller/templates/authenticating_user.html
@@ -1,8 +1,5 @@
 {% extends 'layouts/layout.html' %}
 
 {% block body %}
-
-<h1>table edit</h1>
-
-{% endblock %}
-
+<h1>Authenticating User</h1>
+{% endblock %}  
